--- a/views/LandingPage.html
+++ b/views/LandingPage.html
@@ -10,7 +10,6 @@
 
     <script src="../static/js/loadDb.js"></script>
     <script src="../static/js/renderSite.js" defer></script>
-    <script src="../static/js/LandingPage.js" defer></script>
 </head>
 <header>
     <nav id="navbar_container">
@@ -28,18 +27,15 @@
                         בעצמכם על מנת לתרום להנאת אחרים ולהנאתכם</p>
                 </div>
                 <div class="login-register-buttons-container">
-                    <a href="LoginPage.html" class="pink-button"> להתחברות</a>
+                    <a href="LoginPage" class="pink-button"> להתחברות</a>
                     <br />
                     <br />
-                    <a href="RegisterPage.html" class="orange-button"> להרשמה</a>
+                    <a href="RegisterPage" class="orange-button"> להרשמה</a>
                 </div>
                 
             </div>
 
         </div>
-        <!-- <div class="box-image-landing">
-        <img src="../images/Logo_Web.png" alt="This is an image of logo">
-    </div> -->
         <div class="box-image-landing">
             <div class="landing-animation a"></div>
             <div class="landing-animation b"></div>
