--- a/views/OnReviewSubmittedPage.html
+++ b/views/OnReviewSubmittedPage.html
@@ -33,12 +33,12 @@
 <div class="containerbuttons-2">
     <div class="item1">
 
-        <a href="LandingPage.html#" class="dark-button"> התנתק</a>
+        <a href="LandingPage#" class="dark-button"> התנתק</a>
 
     </div>
     <div class="item2">
 
-        <a href="WriteReviewPage.html" class="dark-button"> חזור</a>
+        <a href="WriteReviewPage" class="dark-button"> חזור</a>
     </div>
     </body>
     
