--- a/views/RecommendedForMe.html
+++ b/views/RecommendedForMe.html
@@ -24,9 +24,9 @@
             
     </div>
     <div class="containerbuttons">
-        <div><a href="LandingPage.html" class="dark-button"> התנתק</a></div>
+        <div><a href="LandingPage" class="dark-button"> התנתק</a></div>
         <div></div>
-        <div><a href="SearchPage.html" class="dark-button"> חזור</a></div>
+        <div><a href="SearchPage" class="dark-button"> חזור</a></div>
     </div>
     </div>
 </body>
