--- a/views/RegisterPage.html
+++ b/views/RegisterPage.html
@@ -23,8 +23,8 @@
         <div class="box-register">
             <div>
                 <h2> יצירת משתמש חדש </h2>
-            <p1>כבר רשום?<a href="LoginPage.html" class="login-label"> התחבר</a></p1>
-            <form action="" method="get" class="register-form">
+            <p1>כבר רשום?<a href="LoginPage" class="login-label"> התחבר</a></p1>
+            <form action="/api/createnewuser" method="post" class="register-form">
                 <br>
                 שם:
                 <input type="שם" required id="nameInput" placeholder="Jiara Martins">
@@ -46,7 +46,7 @@
                 <br>
                 <br>
                 <div class="register-button-container">
-                    <a href="SearchPage.html" type="button">
+                    <a href="SearchPage" type="button">
                         <input type="submit" class="dark-button half-button" id="registerBtn" value="הרשם">
                     </a>
                 </div>
