--- a/views/ReviewListPage.html
+++ b/views/ReviewListPage.html
@@ -44,11 +44,11 @@
     
     <div class="containerbuttons-2">
         <div class="item1">
-            <a href="SearchResultsPage.html" class="dark-button"> חזור </a>
+            <a href="SearchResultsPage" class="dark-button"> חזור </a>
         </div>
         <div class="item2">
 
-            <a href="LandingPage.html" class="dark-button"> התנתק </a>
+            <a href="LandingPage" class="dark-button"> התנתק </a>
         </div>
     </div>
 </body>
