--- a/views/SearchPage.html
+++ b/views/SearchPage.html
@@ -27,7 +27,7 @@
                 alt="בואו נתחיל בחיפוש"></div>
 
         <div class="search-grid-item form-row-grid-item">
-            <form action="" method="get" class="myW-form search-form">
+            <form action="/api/getshows" method="get" class="myW-form search-form">
                 <div>
                     קטגוריה:
                     <input type="קטגוריה" id="categoryTextInput" placeholder="דרמה">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="containerbuttons-single">
-            <div><a class="light-btn" href="LandingPage.html"> התנתק</a></div>
+            <div><a class="light-btn" href="LandingPage"> התנתק</a></div>
         </div>
 
 
